Wed Dec  2 07:41:08 2015  Eric Wong  <e@80x24.org>

	* missing/explicit_bzero.c (explicit_bzero): fixup r52839
	  for compilers with "weak" attribute

Wed Dec  2 06:47:25 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* missing/explicit_bzero.c: add ruby_explicit_bzero_hook_unused
	  for preventing optimization. Inspired from OpenBSD.

Tue Dec  1 23:36:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_setname): allow to reset thread name.

Tue Dec  1 23:14:04 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_setname): check the argument if valid
	  string.  [ruby-core:71774] [Bug #11756]

Tue Dec  1 17:13:41 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_string_value_cstr): should not raise on frozen
	  string.

Tue Dec  1 09:35:29 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* missing/explicit_bzero.c: add a few comment.

Tue Dec  1 09:31:19 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* missing/explicit_bzero.c: add disabling optimization on gcc.

Tue Dec  1 07:50:33 2015  Eric Wong  <e@80x24.org>

	* missing/explicit_bzero.c: new file. define explicit_bzero.
	  Fixup r52806

Thu Oct 22 12:54:43 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (register_ubf_list): renamed from
	  add_signal_thread_list.
	* thread_pthread.c (unregister_ubf_list): renamed
	  from remove_signal_thread_list.
	* thread_pthread.c (ubf_wakeup_all_threads): renamed from
	  ping_signal_thread_list.
	* thread_pthread.c (ubf_wakeup_thread): renamed from
	  ubf_select_each.
	* thread_pthread.c (ubf_threads_empty): renamed from
	  check_signal_thread_list().
	* thread_pthread.c (ubf_list_lock): renamed from
	  signal_thread_list_lock.

	* thread_pthread.c (register_ubf_list): large simplification
	  by using ccan/list.h.
	  bonus: removed malloc() and exit(EXIT_FAILURE).
	* thread_pthread.c (unregister_ubf_list): ditto.
	* thread_pthread.c (ubf_threads_empty): ditto.